[gd_scene load_steps=43 format=4 uid="uid://gcyk1e71f4ge"]

[ext_resource type="Texture2D" uid="uid://f50duh6pb70e" path="res://scavenger-hunt/assets/floors/floor-1.png" id="1_a5wg4"]
[ext_resource type="Script" path="res://scavenger-hunt/scripts/room_1.gd" id="1_j7enj"]
[ext_resource type="Texture2D" uid="uid://cgg62du438x1b" path="res://scavenger-hunt/assets/borders/borders-1.png" id="3_fspv0"]
[ext_resource type="Texture2D" uid="uid://bgbmghvcude1g" path="res://scavenger-hunt/assets/walls/walls-1.png" id="4_mkqcg"]
[ext_resource type="Texture2D" uid="uid://dsjhjimk4bqrx" path="res://scavenger-hunt/assets/room1/receptionist.png" id="4_noe72"]
[ext_resource type="Texture2D" uid="uid://by1ly3nuu18dt" path="res://scavenger-hunt/assets/borders/borders-2.png" id="6_xk80i"]
[ext_resource type="Texture2D" uid="uid://cxwbiigbrynvy" path="res://scavenger-hunt/assets/pop_up/notebook_page.png" id="11_0lhsj"]
[ext_resource type="Texture2D" uid="uid://puhyvnyepjne" path="res://scavenger-hunt/assets/doors/wood/door-1.png" id="12_1qeqr"]
[ext_resource type="Texture2D" uid="uid://yd5yvtobjfql" path="res://scavenger-hunt/assets/room1/desk.png" id="12_a0lli"]
[ext_resource type="Texture2D" uid="uid://c1itsed8n31fc" path="res://scavenger-hunt/assets/room1/notebook.png" id="12_r8o7u"]
[ext_resource type="Texture2D" uid="uid://ivk1nl2x5tva" path="res://scavenger-hunt/assets/doors/wood/door-3.png" id="14_gj40p"]
[ext_resource type="PackedScene" uid="uid://bqxanko0hg4hl" path="res://scavenger-hunt/scenes/player.tscn" id="14_wv7gx"]
[ext_resource type="Texture2D" uid="uid://c7iqwwsmlg7io" path="res://scavenger-hunt/assets/doors/wood/door-4.png" id="15_lu7rn"]
[ext_resource type="Texture2D" uid="uid://7k8u3uwr8dc0" path="res://scavenger-hunt/assets/room1/chair.png" id="15_wkn5t"]
[ext_resource type="Texture2D" uid="uid://cg14higfr2aib" path="res://scavenger-hunt/assets/room1/table.png" id="16_4cwij"]
[ext_resource type="Texture2D" uid="uid://b1e7x7k8q4tnq" path="res://scavenger-hunt/assets/doors/wood/door-5.png" id="16_302dd"]
[ext_resource type="Texture2D" uid="uid://bak0vbosqnah5" path="res://scavenger-hunt/assets/room1/picture.png" id="16_y0xd7"]
[ext_resource type="PackedScene" path="res://scavenger-hunt/scenes/question.tscn" id="18_mxad4"]
[ext_resource type="FontFile" uid="uid://dad653sjnvr6f" path="res://fonts/dogicapixel.ttf" id="19_fi0nm"]
[ext_resource type="PackedScene" path="res://scavenger-hunt/scenes/description.tscn" id="20_yqpkd"]
[ext_resource type="Texture2D" uid="uid://bi5wc8hbw0rlw" path="res://scavenger-hunt/assets/doors/glass/glass-5.png" id="22_3uegg"]
[ext_resource type="PackedScene" uid="uid://d1bu06s83i25f" path="res://audio/audio.tscn" id="22_merev"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yu88q"]
texture = ExtResource("1_a5wg4")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSet" id="TileSet_0wprq"]
tile_size = Vector2i(48, 48)
sources/2 = SubResource("TileSetAtlasSource_yu88q")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ygcu6"]
texture = ExtResource("4_mkqcg")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[sub_resource type="TileSet" id="TileSet_lr774"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_ygcu6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2p86d"]
texture = ExtResource("3_fspv0")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, 6.18718, 24, 6.36396, 24, 24, -24, 24)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -7.07107, -24, -6.89429)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, 24, 6.36396, 24, 24, 2.74004, 24, 2.91682, -24)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.91681, -24, -2.91681, 24, -24, 24, -24, -24)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, 3.09359, 24, 2.74004, -6.18719, -24, -6.01041)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, 24, -6.18719, -2.91681, -6.01041, -2.91681, 24, -24, 24, -24, -24)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, 24, -24, 6.18719, 2.91681, 6.01041, 2.91681, -24, 24, -24, 24, 24)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, 24, 24, 6.18719, -2.91681, 6.01041, -2.91681, -24, -24, -24, -24, 24)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fveqc"]
texture = ExtResource("6_xk80i")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -6.18718, 24, 24, 2.65166, 24, 3.18198, -6.01041)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -6.18718, -24, 24, -2.65166, 24, -3.18198, -6.01041)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, 24, 24, 3.18198, 24, 3.00549, -5.91095, -24, -6.01041, -24, -24)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -5.83363, -24, 24, -3.18198, 24, -3.00549, -5.91095, 24, -6.01041, 24, -24)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -6.18718, 24, 24, 2.65166, 24, 3.18198, -6.01041)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -6.18718, -24, 24, -2.65166, 24, -3.18198, -6.01041)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, 24, 24, 3.18198, 24, 3.00549, -5.91095, -24, -6.01041, -24, -24)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -5.83363, -24, 24, -3.18198, 24, -3.00549, -5.91095, 24, -6.01041, 24, -24)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -6.18718, 24, 24, 2.65166, 24, 3.18198, -6.01041)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -6.18718, -24, 24, -2.65166, 24, -3.18198, -6.01041)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, 24, 24, 3.18198, 24, 3.00549, -5.91095, -24, -6.01041, -24, -24)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -5.83363, -24, 24, -3.18198, 24, -3.00549, -5.91095, 24, -6.01041, 24, -24)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -5.83363, -24, 24, -3.18198, 24, -3.00549, -5.91095, 24, -6.01041, 24, -24)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, 24, 24, 3.18198, 24, 3.00549, -5.91095, -24, -6.01041, -24, -24)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -6.18718, 3.18198, -6.01041)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.18198, -24, -24, -24, -24, -6.18718, -3.18198, -6.01041)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.18198, -24, 24, -24, 24, -5.83363, -24, -6.01041, -24, -24)

[sub_resource type="TileSet" id="TileSet_pcaud"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_2p86d")
sources/1 = SubResource("TileSetAtlasSource_fveqc")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3uqma"]
radius = 19.0008
height = 58.0012

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfxvv"]
size = Vector2(6400, 1016.67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhomk"]
size = Vector2(14, 21.0499)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l54co"]
size = Vector2(36, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_koiod"]
size = Vector2(69, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hq2a"]
size = Vector2(12, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxsrr"]
size = Vector2(41.5, 0)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nyjjo"]
load_path = "res://.godot/imported/door-2.png-e774a56a04fb41636429b65e3611d30e.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_lddvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_1qeqr")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_nyjjo")
}, {
"duration": 1.0,
"texture": ExtResource("14_gj40p")
}, {
"duration": 1.0,
"texture": ExtResource("15_lu7rn")
}, {
"duration": 1.0,
"texture": ExtResource("16_302dd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxhcq"]
size = Vector2(48, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afgvc"]
size = Vector2(27, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfwip"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04qg3"]
size = Vector2(53.875, 20)

[node name="Room1" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_j7enj")

[node name="Floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAANAA4AAgAAAAAAAAANAA8AAgAAAAEAAAANABAAAgAAAAEAAAANABEAAgAAAAEAAAANABIAAgAAAAEAAAAOAA4AAgABAAAAAAAOAA8AAgACAAEAAAAOABAAAgACAAEAAAAOABEAAgACAAEAAAAOABIAAgACAAEAAAAPAA4AAgABAAAAAAAPAA8AAgACAAEAAAAPABAAAgACAAEAAAAPABEAAgACAAEAAAAPABIAAgACAAEAAAAQAA4AAgABAAAAAAAQAA8AAgACAAEAAAAQABAAAgACAAEAAAAQABEAAgACAAEAAAAQABIAAgACAAEAAAARAA4AAgABAAAAAAARAA8AAgACAAEAAAARABAAAgACAAEAAAARABEAAgACAAEAAAARABIAAgACAAEAAAASAA4AAgABAAAAAAASAA8AAgACAAEAAAASABAAAgACAAEAAAASABEAAgACAAEAAAASABIAAgACAAEAAAATAA4AAgABAAAAAAATAA8AAgACAAEAAAATABAAAgACAAEAAAATABEAAgACAAEAAAATABIAAgACAAEAAAAUAA4AAgABAAAAAAAUAA8AAgACAAEAAAAUABAAAgACAAEAAAAUABEAAgACAAEAAAAUABIAAgACAAEAAAAVAA4AAgABAAAAAAAVAA8AAgACAAEAAAAVABAAAgACAAEAAAAVABEAAgACAAEAAAAVABIAAgACAAEAAAAWAA4AAgABAAAAAAAWAA8AAgACAAEAAAAWABAAAgACAAEAAAAWABEAAgACAAEAAAAWABIAAgACAAEAAAAXAA4AAgABAAAAAAAXAA8AAgACAAEAAAAXABAAAgACAAEAAAAXABEAAgACAAEAAAAXABIAAgACAAEAAAAYAA4AAgABAAAAAAAYAA8AAgACAAEAAAAYABAAAgACAAEAAAAYABEAAgACAAEAAAAYABIAAgACAAEAAAAZAA4AAgABAAAAAAAZAA8AAgACAAEAAAAZABAAAgACAAEAAAAZABEAAgACAAEAAAAZABIAAgACAAEAAAANABMAAgAAAAEAAAAOABMAAgACAAEAAAAPABMAAgACAAEAAAAQABMAAgACAAEAAAARABMAAgACAAEAAAASABMAAgACAAEAAAATABMAAgACAAEAAAAUABMAAgACAAEAAAAVABMAAgACAAEAAAAWABMAAgACAAEAAAAXABMAAgACAAEAAAAYABMAAgACAAEAAAAZABMAAgACAAEAAAANABQAAgAAAAEAAAAOABQAAgACAAEAAAAPABQAAgACAAEAAAAQABQAAgACAAEAAAARABQAAgACAAEAAAASABQAAgACAAEAAAATABQAAgACAAEAAAAUABQAAgACAAEAAAAVABQAAgACAAEAAAAWABQAAgACAAEAAAAXABQAAgACAAEAAAAYABQAAgACAAEAAAAZABQAAgACAAEAAAANABUAAgAAAAEAAAAOABUAAgACAAEAAAAPABUAAgACAAEAAAAQABUAAgACAAEAAAARABUAAgACAAEAAAASABUAAgACAAEAAAATABUAAgACAAEAAAAUABUAAgACAAEAAAAVABUAAgACAAEAAAAWABUAAgACAAEAAAAXABUAAgACAAEAAAAYABUAAgACAAEAAAAZABUAAgACAAEAAAAXAA0AAgABAAEAAAATABYAAgACAAEAAAAXAAsAAgABAAEAAAAXAAwAAgABAAEAAAA=")
tile_set = SubResource("TileSet_0wprq")

[node name="Walls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAOAA0AAQABAAEAAAAPAA0AAQABAAEAAAAQAA0AAQABAAEAAAARAA0AAQABAAEAAAASAA0AAQABAAEAAAATAA0AAQABAAEAAAAUAA0AAQABAAEAAAAVAA0AAQABAAEAAAAWAA0AAQACAAEAAAAZAA0AAQAIAAEAAAANAA0AAQAIAAEAAAAOAAwAAQABAAAAAAAPAAwAAQABAAAAAAAQAAwAAQABAAAAAAARAAwAAQABAAAAAAASAAwAAQABAAAAAAATAAwAAQABAAAAAAAUAAwAAQABAAAAAAAVAAwAAQABAAAAAAAWAAwAAQACAAAAAAAYAAwAAQAAAAAAAAAZAAwAAQABAAAAAAANAAwAAQABAAAAAAAYAA0AAQAAAAEAAAA=")
tile_set = SubResource("TileSet_lr774")

[node name="Border" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAA3ACUACgAAAAAAAAA4ACUACgAAAAAAAAA5ACUACgAAAAAAAABAACUACgAAAAMAAAA8ACUACgAAAAAAAAA9ACUACgAAAAAAAAA+ACUACgAAAAAAAAA/ACUACgAAAAAAAABAAB8ACgABAAEAAABAACAACgABAAEAAABAACEACgABAAEAAABAACIACgABAAEAAABAACMACgABAAEAAABAACQACgABAAEAAAA1AB8ACgACAAEAAAA1ACAACgACAAEAAAA1ACEACgACAAEAAAA1ACIACgACAAEAAAA1ACMACgACAAEAAAA1ACQACgACAAEAAAA1ACUACgABAAMAAAA2ACUACgAAAAAAAAAOAAwAAAAAAAEAAAAPAAwAAAAAAAEAAAAQAAwAAAAAAAEAAAARAAwAAAAAAAEAAAASAAwAAAAAAAEAAAATAAwAAAAAAAEAAAAUAAwAAAAAAAEAAAAVAAwAAAAAAAEAAAAWAAwAAQACAAEAAAAYAAwAAQADAAEAAAAMAAwAAQAGAAEAAAAMAA0AAQAGAAIAAAAMAA4AAQAGAAIAAAAMAA8AAQAGAAIAAAAMABAAAQAGAAIAAAAMABEAAQAGAAIAAAAMABIAAQAGAAIAAAAMABMAAQAGAAIAAAAMABQAAQAGAAIAAAAMABUAAQAGAAIAAAAMABYAAQAGAAMAAAANAAwAAQAHAAEAAAANABYAAQAHAAMAAAAOABYAAQAHAAMAAAAPABYAAQAHAAMAAAAQABYAAQAHAAMAAAARABYAAQAHAAMAAAASABYAAQACAAEAAAAUABYAAQADAAEAAAAVABYAAQAHAAMAAAAWABYAAQAHAAMAAAAXABYAAQAHAAMAAAAYABYAAQAHAAMAAAAaAA0AAQAIAAIAAAAaAA4AAQAIAAIAAAAaAA8AAQAIAAIAAAAaABAAAQAIAAIAAAAaABEAAQAIAAIAAAAaABIAAQAIAAIAAAAaABMAAQAIAAIAAAAaABQAAQAIAAIAAAAaABUAAQAIAAIAAAAaAAwAAQAIAAEAAAAZAAwAAQAHAAEAAAAaABYAAQAIAAMAAAAZABYAAQAHAAMAAAAWAAsAAAABAAEAAAAYAAsAAAACAAEAAAA=")
tile_set = SubResource("TileSet_pcaud")

[node name="Receptionist" type="CharacterBody2D" parent="."]
position = Vector2(937, 697)
collision_mask = 2
metadata/_edit_group_ = true

[node name="ReceptionistSprite" type="Sprite2D" parent="Receptionist"]
position = Vector2(-0.000793457, -10.0006)
scale = Vector2(2.4, 2.4)
texture = ExtResource("4_noe72")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Receptionist"]
position = Vector2(-0.000793457, -10.0006)
shape = SubResource("CapsuleShape2D_3uqma")

[node name="Desk" type="CharacterBody2D" parent="."]
position = Vector2(941, 724)
scale = Vector2(0.03, 0.03)
collision_mask = 2
metadata/_edit_group_ = true

[node name="DeskSprite" type="Sprite2D" parent="Desk"]
position = Vector2(0.000172933, 0.000274658)
texture = ExtResource("12_a0lli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk"]
position = Vector2(0.000244141, -441.667)
shape = SubResource("RectangleShape2D_xfxvv")

[node name="Chair" type="StaticBody2D" parent="."]
position = Vector2(744, 912)
metadata/_edit_group_ = true

[node name="ChairSprite" type="Sprite2D" parent="Chair"]
scale = Vector2(3, 3)
texture = ExtResource("15_wkn5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_qhomk")

[node name="Table" type="StaticBody2D" parent="."]
position = Vector2(789, 924)
metadata/_edit_group_ = true

[node name="TableSprite" type="Sprite2D" parent="Table"]
scale = Vector2(3, 3)
texture = ExtResource("16_4cwij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table"]
shape = SubResource("RectangleShape2D_l54co")

[node name="Chair2" type="StaticBody2D" parent="."]
position = Vector2(834, 912)
metadata/_edit_group_ = true

[node name="ChairSprite" type="Sprite2D" parent="Chair2"]
scale = Vector2(3, 3)
texture = ExtResource("15_wkn5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair2"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_qhomk")

[node name="QuestionArea" type="Area2D" parent="."]
position = Vector2(941, 706)
collision_layer = 5
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuestionArea"]
shape = SubResource("RectangleShape2D_koiod")

[node name="Chair3" type="StaticBody2D" parent="."]
position = Vector2(1035, 912)
metadata/_edit_group_ = true

[node name="ChairSprite" type="Sprite2D" parent="Chair3"]
scale = Vector2(3, 3)
texture = ExtResource("15_wkn5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair3"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_qhomk")

[node name="Table2" type="StaticBody2D" parent="."]
position = Vector2(1080, 924)
metadata/_edit_group_ = true

[node name="TableSprite" type="Sprite2D" parent="Table2"]
scale = Vector2(3, 3)
texture = ExtResource("16_4cwij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table2"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_4hq2a")

[node name="Chair4" type="StaticBody2D" parent="."]
position = Vector2(1125, 912)
collision_mask = 2

[node name="ChairSprite" type="Sprite2D" parent="Chair4"]
scale = Vector2(3, 3)
texture = ExtResource("15_wkn5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair4"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_qhomk")

[node name="Area2D" type="Area2D" parent="Chair4"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair4/Area2D"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_fxsrr")

[node name="LeaveDoor" type="StaticBody2D" parent="."]
position = Vector2(1128, 609)
collision_mask = 2
metadata/_edit_group_ = true

[node name="DoorSprite" type="AnimatedSprite2D" parent="LeaveDoor"]
sprite_frames = SubResource("SpriteFrames_lddvi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaveDoor"]
shape = SubResource("RectangleShape2D_rxhcq")

[node name="NotebookArea" type="Area2D" parent="."]
position = Vector2(839, 1017)
collision_layer = 4
collision_mask = 2

[node name="NotebookSprite" type="Sprite2D" parent="NotebookArea"]
position = Vector2(-50, -100)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_r8o7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NotebookArea"]
position = Vector2(-50, -89)
shape = SubResource("RectangleShape2D_afgvc")

[node name="PictureArea" type="Area2D" parent="."]
position = Vector2(771, 630)
collision_layer = 4
collision_mask = 2
metadata/_edit_group_ = true

[node name="PictureSprite" type="Sprite2D" parent="PictureArea"]
texture = ExtResource("16_y0xd7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PictureArea"]
position = Vector2(0, -6.10352e-05)
shape = SubResource("RectangleShape2D_gfwip")

[node name="EnterDoor" type="StaticBody2D" parent="."]
position = Vector2(936, 1124)
scale = Vector2(0.888889, 0.995935)
collision_mask = 2

[node name="FrontDoorSprite" type="Sprite2D" parent="EnterDoor"]
texture = ExtResource("22_3uegg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterDoor"]
position = Vector2(0.0625, -52.2123)
shape = SubResource("RectangleShape2D_04qg3")

[node name="Player" parent="." instance=ExtResource("14_wv7gx")]
position = Vector2(934, 1021)
scale = Vector2(1.2, 1.2)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(3.57628e-07, 0)
zoom = Vector2(3.5, 3.5)
limit_left = 1206
limit_top = 1152
limit_right = 2538
limit_bottom = 2148

[node name="PageSprite" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 653.5
offset_top = 878.0
offset_right = 983.5
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("11_0lhsj")

[node name="Message" type="Label" parent="PageSprite"]
layout_mode = 0
offset_left = 33.8889
offset_top = 22.2222
offset_right = 323.889
offset_bottom = 183.222
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 6
theme_override_fonts/font = ExtResource("19_fi0nm")
theme_override_font_sizes/font_size = 8
text = "Temporary"
autowrap_mode = 3

[node name="CloseInstructions" type="Label" parent="PageSprite"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.4167
offset_top = 44.5833
offset_right = 60.5833
offset_bottom = 58.5833
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_fi0nm")
theme_override_font_sizes/font_size = 8
text = "Press [ESC] to close"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PicturePopUp" parent="." instance=ExtResource("20_yqpkd")]
visible = false
offset_left = 653.5
offset_top = 630.5
offset_right = 901.5
offset_bottom = 727.5
scale = Vector2(0.833, 0.833)

[node name="CloseInstructions" type="Label" parent="PicturePopUp"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.3746
offset_top = 34.9334
offset_right = 60.6254
offset_bottom = 48.9334
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_fi0nm")
theme_override_font_sizes/font_size = 8
text = "Press [ESC] to close"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChairPopUp" parent="." instance=ExtResource("20_yqpkd")]
visible = false
offset_left = 1016.5
offset_top = 904.5
offset_right = 1264.5
offset_bottom = 1001.5
scale = Vector2(0.833, 0.833)

[node name="CloseInstructions" type="Label" parent="ChairPopUp"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.3745
offset_top = 34.9335
offset_right = 60.6255
offset_bottom = 48.9335
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_fi0nm")
theme_override_font_sizes/font_size = 8
text = "Press [ESC] to close"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Question" parent="." instance=ExtResource("18_mxad4")]
visible = false
offset_left = 836.5
offset_top = 682.0
offset_right = 1084.5
offset_bottom = 779.0
scale = Vector2(0.833, 0.833)

[node name="CloseInstructions" type="Label" parent="Question"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.575
offset_top = 34.3331
offset_right = 59.425
offset_bottom = 48.3331
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_fi0nm")
theme_override_font_sizes/font_size = 8
text = "Press [ESC] to close"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Audio" parent="." instance=ExtResource("22_merev")]

[connection signal="popup_close" from="." to="Player" method="_on_room_1_popup_close"]
[connection signal="popup_open" from="." to="Player" method="_on_room_1_popup_open"]
[connection signal="interact" from="Player" to="." method="_on_player_interact"]
[connection signal="no_interact" from="Player" to="." method="_on_player_no_interact"]
[connection signal="option1" from="Question" to="." method="_on_question_option_1"]
[connection signal="option2" from="Question" to="." method="_on_question_option_2"]
[connection signal="option3" from="Question" to="." method="_on_question_option_3"]
